--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,10 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
-/* Navbar */
-
 .nav {
   position: fixed;
-  background-color: black;
+  background-color:rgba(0, 0, 0, 0.5);
+  /* background-color: rgb(27, 27, 27); */
   top: 0;
   left: 0;
   right: 0;
@@ -15,7 +14,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 0;
+  padding: 10px 0;
   transition: all 0.3s ease-in-out;
 }
 
